--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,11 @@ server:
   port: 8082
 service-customer:
   ribbon:
-    listOfServer: https://localhost:8080/springData/person
+    listOfServer: http://localhost:8080/api/v1/customer
 spring:
   application:
     name: MicroserviceProduct
   data:
     mongodb:
-      uri: mongodb://haroldferrm:rojoverano@ac-bk2dwnm-shard-00-00.b7tbt46.mongodb.net:27017,ac-bk2dwnm-shard-00-01.b7tbt46.mongodb.net:27017,ac-bk2dwnm-shard-00-02.b7tbt46.mongodb.net:27017/?ssl=true&replicaSet=atlas-iar90x-shard-0&authSource=admin&retryWrites=true&w=majority
+      uri: mongodb://haroldusername:haroldpassword@ac-yyqiukt-shard-00-00.njg0lhs.mongodb.net:27017,ac-yyqiukt-shard-00-01.njg0lhs.mongodb.net:27017,ac-yyqiukt-shard-00-02.njg0lhs.mongodb.net:27017/?ssl=true&replicaSet=atlas-x44noa-shard-0&authSource=admin&retryWrites=true&w=majority
       database: ReactivoDB
